# snake

./: pyproject.toml
snake/: __init__.py  board.py  checkerboard.py  code_1.py  code_2.py  dir.py  exceptions.py  fruit.py  game_object.py  observer.py  snake.py  subject.py  tile.py
